--- a/PJT12_1_RoadFollowing+WorkingAreaRecognition.ipynb
+++ b/PJT12_1_RoadFollowing+WorkingAreaRecognition.ipynb
@@ -2,10 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
+      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
+      "[System] WebSocket 프로세서 시작\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mChecking connectivity to the model hosters, this may take a while. To bypass this check, set `DISABLE_MODEL_SOURCE_CHECK` to `True`.\u001b[0m\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\paddle\\utils\\cpp_extension\\extension_utils.py:718: UserWarning: No ccache found. Please be aware that recompiling all source files may be required. You can download and install ccache from: https://github.com/ccache/ccache/blob/master/doc/INSTALL.md\n",
+      "  warnings.warn(warning_message)\n",
+      "\u001b[32mCreating model: ('PP-OCRv5_server_det', None)\u001b[0m\n",
+      "\u001b[32mModel files already exist. Using cached files. To redownload, please delete the directory manually: `C:\\Users\\user\\.paddlex\\official_models\\PP-OCRv5_server_det`.\u001b[0m\n",
+      "\u001b[32mCreating model: ('korean_PP-OCRv5_mobile_rec', None)\u001b[0m\n",
+      "\u001b[32mModel files already exist. Using cached files. To redownload, please delete the directory manually: `C:\\Users\\user\\.paddlex\\official_models\\korean_PP-OCRv5_mobile_rec`.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR Detector Ready!\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "os.environ[\"DISABLE_MODEL_SOURCE_CHECK\"] = \"True\"\n",
+    "\n",
     "import torchvision\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
@@ -22,14 +55,112 @@
     "import time\n",
     "import cv2\n",
     "import PIL.Image\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from vision.detector import PlateNumberDetector\n",
+    "\n",
+    "# [추가] OCR 탐지기 초기화 (한 번만 실행)\n",
+    "# model='paddle'로 설정하여 로컬 엔진 사용\n",
+    "ocr_detector = PlateNumberDetector(\n",
+    "    model=\"paddle\",\n",
+    "    plate_similarity_thresh=80,\n",
+    "    debug_mode=False  # 실전 모드 (카메라 영상 분석)\n",
+    ")\n",
+    "print(\"OCR Detector Ready!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model load success\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "200edd37dfe24800951a90dfe563b9f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Label(value='areaA :'), Label(value='None'))), HBox(children=(Label(value='areaB…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c260fcbc3b9848bfab471ca52f83de14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Image(value=b'', format='jpeg', height='224', width='224'), FloatSlider(value=0.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b43afe5428f74463abc7898f771a0bfd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(button_style='info', description='Start', style=ButtonStyle()), Label(value='Find Area :…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f976f091b5c443b0bbad00af318a23b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Label(value='Manual Controller'), Button(description='forward', layout=Layout(al…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc3bc9700138401abdbdac359007c318",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "robot = Robot()\n",
     "camera = Camera()\n",
@@ -97,8 +228,13 @@
     "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias',disabled = False)\n",
     "vbox3 = widgets.VBox([lbl51,speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider])\n",
     "hbox6 = widgets.HBox([controls_box, vbox3], layout=widgets.Layout(align_self='center'))\n",
+    "log_output = ipywidgets.Output(layout={'border': '1px solid black', 'height': '200px', 'overflow_y': 'scroll'})\n",
     "\n",
-    "display(vbox1, hbox4,hbox5,hbox6)\n",
+    "display(vbox1, hbox4,hbox5,hbox6, log_output)\n",
+    "\n",
+    "def print_log(message):\n",
+    "    with log_output:\n",
+    "        print(message)\n",
     "\n",
     "manual_btnlst = [stop_button, forward_button, backward_button, left_button, right_button]\n",
     "camera_link = traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)\n",
@@ -132,14 +268,15 @@
     "areaA = 'mint'\n",
     "areaB = 'darkblue'\n",
     "# 조사한 색상의 이름과 min, max HSV 값, 그리고 회전 각도(angle)를 담은 리스트\n",
+    "# [수정] colors 리스트 (여러 타겟을 리스트 []로 묶음)\n",
     "colors = [\n",
-    "    # angle: 로봇팔 회전 각도 (단위: 도), 0이면 회전 안 함\n",
-    "    {'name': 'red',      'lower': np.array([3, 217, 214]),   'upper': np.array([4, 222, 218]),    'angle': 0 },\n",
-    "    {'name': 'mint',     'lower': np.array([68, 17, 221]),   'upper': np.array([70, 20, 222]),    'angle': 32.70 }, # 오른쪽으로 32.70도\n",
-    "    {'name': 'blue',     'lower': np.array([106, 212, 207]), 'upper': np.array([108, 223, 216]),  'angle': 29.47 }, # 오른쪽으로 29.47도\n",
-    "    {'name': 'darkblue', 'lower': np.array([120, 201, 182]), 'upper': np.array([120, 206, 189]),  'angle': 29.57 }, # (기존 코드 유지용)\n",
-    "    {'name': 'yellow',   'lower': np.array([27, 85, 195]),   'upper': np.array([30, 97, 221]),    'angle': 0 },\n",
-    "    {'name': 'orange',   'lower': np.array([17, 145, 222]),  'upper': np.array([18, 154, 224]),   'angle': 0 }\n",
+    "    # targets: 해당 영역에서 찾아야 할 차량 번호들 (리스트 형태)\n",
+    "    {'name': 'red',      'lower': np.array([3, 217, 214]),   'upper': np.array([4, 222, 218]),    'angle': 0,     'targets': [] },\n",
+    "    {'name': 'mint',     'lower': np.array([68, 17, 221]),   'upper': np.array([70, 20, 222]),    'angle': 32.70, 'targets': ['263주0300', '255도7345'] }, \n",
+    "    {'name': 'blue',     'lower': np.array([106, 212, 207]), 'upper': np.array([108, 223, 216]),  'angle': 29.47, 'targets': [] }, \n",
+    "    {'name': 'darkblue', 'lower': np.array([120, 201, 182]), 'upper': np.array([120, 206, 189]),  'angle': 29.57, 'targets': ['187고1604', '249마1706'] }, \n",
+    "    {'name': 'yellow',   'lower': np.array([27, 85, 195]),   'upper': np.array([30, 97, 221]),    'angle': 0,     'targets': [] },\n",
+    "    {'name': 'orange',   'lower': np.array([17, 145, 222]),  'upper': np.array([18, 154, 224]),   'angle': 0,     'targets': [] }\n",
     "]\n",
     "\n",
     "areaA_color = next((color for color in colors if color['name'] == areaA), None)\n",
@@ -168,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,21 +319,20 @@
     "        self.flag = 1\n",
     "        flaglbl.value = str(self.flag)\n",
     "\n",
-    "    # [추가] 화면을 계속 갱신하면서 대기하는 함수\n",
+    "    # [수정 1] 화면에 글자를 띄울 때, 로그창에도 같이 출력하도록 변경\n",
     "    def wait_and_show(self, seconds, message=\"\"):\n",
+    "        # 메시지가 있으면 로그창에도 출력!\n",
+    "        if message:\n",
+    "            print_log(f\"▶ {message}\") \n",
+    "            \n",
     "        start_time = time.time()\n",
     "        while time.time() - start_time < seconds:\n",
-    "            # 1. 최신 카메라 프레임 가져오기\n",
     "            self.imageInput = camera.value\n",
     "            \n",
-    "            # 2. 메시지가 있다면 화면에 표시\n",
     "            if message:\n",
-    "                cv2.putText(self.imageInput, message, (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
+    "                cv2.putText(self.imageInput, message, (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 0.8, (0, 0, 255), 2)\n",
     "            \n",
-    "            # 3. 위젯 업데이트 (이게 있어야 화면이 안 멈춤)\n",
     "            image_widget.value = bgr8_to_jpeg(self.imageInput)\n",
-    "            \n",
-    "            # 4. 짧게 대기 (CPU 과부하 방지)\n",
     "            time.sleep(0.05)\n",
     "        \n",
     "    def run(self):\n",
@@ -258,15 +394,12 @@
     "            # 목표가 아니라면(이미 방문했거나 순서가 아니면) 그냥 지나갑니다.\n",
     "            if is_valid_target:\n",
     "                \n",
-    "                # 1. 1초 더 주행 (화면 갱신하며)\n",
     "                self.wait_and_show(1.0, \"Approaching Goal...\")\n",
     "\n",
-    "                # 2. 로봇 정지\n",
     "                if 'roadFinding' in globals() and roadFinding:\n",
     "                    roadFinding.paused = True\n",
     "                robot.stop()\n",
     "\n",
-    "                # 3. 플래그 업데이트 및 목표 설정\n",
     "                if name == areaA:\n",
     "                    self.flag = 2\n",
     "                    findArea = areaB\n",
@@ -285,18 +418,44 @@
     "                current_color_info = next((c for c in colors if c['name'] == name), None)\n",
     "                target_angle = current_color_info['angle'] if current_color_info else 0\n",
     "\n",
+    "                target_list = current_color_info.get('targets', []) if current_color_info else []\n",
+    "\n",
     "                if target_angle != 0:\n",
     "                    TTLServo.servoAngleCtrl(1, target_angle, 1, 100)\n",
-    "                    self.wait_and_show(1.5, f\"Rotating {target_angle}...\")\n",
+    "                    self.wait_and_show(2, f\"Rotating {target_angle}...\")\n",
     "\n",
-    "                    self.wait_and_show(2, \"OCR Capturing...\")\n",
-    "\n",
-    "                    high_res_image = camera_ocr.value\n",
+    "                    self.wait_and_show(10.0, \"Processing OCR...\")\n",
+    "                    high_res_image = camera.value_high\n",
     "                    \n",
     "                    if high_res_image is not None:\n",
-    "                        h, w, _ = high_res_image.shape\n",
-    "                        \n",
-    "                        # result = my_ocr_function(high_res_image)\n",
+    "                       \n",
+    "                        results = ocr_detector.detect(high_res_image, target='255도7345')\n",
+    "\n",
+    "                        if results:\n",
+    "                            found_any_match = False\n",
+    "                            \n",
+    "                            # [수정 2] 복잡한 그리기 로직 삭제 -> 순수 비교 로직만 남김\n",
+    "                            detected_texts = []\n",
+    "                            for res in results:\n",
+    "                                # 공백 제거 후 비교\n",
+    "                                clean_text = res.text.replace(\" \", \"\").strip()\n",
+    "                                detected_texts.append(clean_text)\n",
+    "                                \n",
+    "                                # 타겟 리스트와 비교\n",
+    "                                for t in target_list:\n",
+    "                                    if t.replace(\" \", \"\").strip() == clean_text:\n",
+    "                                        found_any_match = True\n",
+    "                                        break\n",
+    "                            \n",
+    "                            # 결과 로그 출력 (한 줄로 깔끔하게)\n",
+    "                            print_log(f\"--- 인식 결과: {detected_texts}\")\n",
+    "                            \n",
+    "                            status_msg = \"Target Found!\" if found_any_match else \"Target Not Found\"\n",
+    "                            self.wait_and_show(3.0, status_msg)\n",
+    "                            \n",
+    "                        else:\n",
+    "                            print_log(\"OCR Failed: No plates found\")\n",
+    "                            self.wait_and_show(2.0, \"No Plates Found\")\n",
     "                        \n",
     "                        self.wait_and_show(1.0, \"Processing OCR...\")\n",
     "                    else:\n",
@@ -304,12 +463,12 @@
     "                        self.wait_and_show(3.0, \"Img Error\")\n",
     "\n",
     "                    TTLServo.servoAngleCtrl(1, 0, 1, 100)\n",
-    "                    self.wait_and_show(1.5, \"Returning...\")\n",
+    "                    self.wait_and_show(2, \"Returning...\")\n",
     "                \n",
     "                else:\n",
     "                    # 정면일 경우\n",
     "                    print(f\"[{name}] OCR capturing at frontal view...\")\n",
-    "                    # [수정] time.sleep(5) -> wait_and_show(5) 로 변경해야 화면이 안 멈춥니다.\n",
+    "\n",
     "                    self.wait_and_show(5.0, \"OCR Frontal View...\") \n",
     "\n",
     "                # 5. 모든 작업이 끝나면 주행 재개\n",
@@ -383,6 +542,9 @@
     "    global camera_link, goalFinding, roadFinding\n",
     "    #Manual -> Auto\n",
     "    if startBtn.description == \"Start\" :\n",
+    "\n",
+    "        # [여기 추가] 시작했다는 로그를 강제로 출력\n",
+    "        print_log(\"System Started! Target Finding Begin...\")\n",
     "        camera_link.unlink()\n",
     "        goalFinding = WorkingAreaFind()\n",
     "        goalFinding.start()\n",
