--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3b3d6bbe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
-      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[System] WebSocket 프로세서 시작\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -30,6 +13,7 @@
     "import ipywidgets\n",
     "from robotpal import Camera, bgr8_to_jpeg\n",
     "from IPython.display import display\n",
+    "from robotpal.SCSCtrl import TTLServo\n",
     "import traitlets\n",
     "\n",
     "camera = Camera()\n",
@@ -38,55 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d40c9464",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📷 카메라 스트리밍 중... 버튼을 눌러 816x616으로 저장하세요.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "907ddc41d8b6468aaa860ed75300314e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x02\\x01\\x0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c1f7e9ab22b4700a6d285296aa18037",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='primary', description='816x616 캡처 (Resize)', icon='camera', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ℹ️ 현재 시뮬레이터 원본 출력: 224x224 (이것을 816x616으로 변환하여 저장합니다)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. 모니터링용 위젯 설정 (화면 표시용은 300x300 유지)\n",
+    "\n",
+    "TTLServo.servoAngleCtrl(5, 45, 1, 100)\n",
     "image_widget = ipywidgets.Image(format='jpeg', width=300, height=300)\n",
     "traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)\n",
     "\n",
