--- a/main.ipynb
+++ b/main.ipynb
@@ -7,188 +7,79 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
-      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
-      "[System] WebSocket 프로세서 시작\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[TCP] 클라이언트 연결됨 (('127.0.0.1', 1403))\n"
+      "\u001b[33mChecking connectivity to the model hosters, this may take a while. To bypass this check, set `DISABLE_MODEL_SOURCE_CHECK` to `True`.\u001b[0m\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\paddle\\utils\\cpp_extension\\extension_utils.py:718: UserWarning: No ccache found. Please be aware that recompiling all source files may be required. You can download and install ccache from: https://github.com/ccache/ccache/blob/master/doc/INSTALL.md\n",
+      "  warnings.warn(warning_message)\n",
+      "\u001b[32mCreating model: ('PP-OCRv5_server_det', None)\u001b[0m\n",
+      "\u001b[32mModel files already exist. Using cached files. To redownload, please delete the directory manually: `C:\\Users\\user\\.paddlex\\official_models\\PP-OCRv5_server_det`.\u001b[0m\n",
+      "\u001b[32mCreating model: ('korean_PP-OCRv5_mobile_rec', None)\u001b[0m\n",
+      "\u001b[32mModel files already exist. Using cached files. To redownload, please delete the directory manually: `C:\\Users\\user\\.paddlex\\official_models\\korean_PP-OCRv5_mobile_rec`.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "import ipywidgets\n",
-    "from IPython.display import display\n",
-    "import robotpal.robot_config as cfg\n",
-    "import robotpal.robot_vision as Rvision\n",
-    "import robotpal.robot_logic as Rlogic\n",
-    "import time"
+    "from vision.detector import PlateNumberDetector\n",
+    "import cv2\n",
+    "\n",
+    "# 그냥 카메라에서 프레임 1장 캡처해오는 함수 테스트용\n",
+    "def get_frame():\n",
+    "    # 카메라 열기\n",
+    "    cap = cv2.VideoCapture(1, cv2.CAP_DSHOW)\n",
+    "\n",
+    "    # 카메라 열기 실패 체크\n",
+    "    if not cap.isOpened():\n",
+    "        print(\"카메라를 열 수 없습니다.\")\n",
+    "        exit(1)\n",
+    "\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"프레임을 읽지 못했습니다.\")\n",
+    "        assert ()\n",
+    "\n",
+    "    return frame\n",
+    "\n",
+    "\n",
+    "# 번호판 인식 객체 로드\n",
+    "# 주의: OCR 테스트를 많이 하고 싶으면 model을 paddle로 지정해서 로컬 모델로 돌릴 것!\n",
+    "# clova ocr api 호출 수 너무 늘어나지 않게 주의\n",
+    "detector = PlateNumberDetector(\n",
+    "    model=\"paddle\",                 # OCR할 엔진 선택 (\"paddle\" 또는 \"clova\")\n",
+    "    plate_similarity_thresh=82,     # 타겟 번호판과 일치하는지 판단할 유사도 임계치(기본값 80)\n",
+    "    debug_mode=False,                # 디버그 모드 : 사전 OCR 데이터(data/demo/에 존재) 불러오기 -> API 호출 수 줄이거나 모델 로드 리소스 생략 가능\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aedf554d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Send Servo] ID: 1, Angle: 0.0, Speed: 30.0\n",
-      "[Send Servo] ID: 5, Angle: 24.988235294117647, Speed: 30.0\n",
-      "[15:41:17] >>> 서보 모터 초기화 완료\n",
-      "[15:41:17] >>> 조향 모델 로딩 중...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15:41:18] >>> YOLO 및 OCR 모델 로딩 중...\n",
-      "[15:41:20] >>> 비전 시스템 초기화 완료\n",
-      "[15:41:20] >>> 감지 스레드 시작됨\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23fd3d9691e643658e72a460478dbe63",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x02\\x01\\x0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53fc4d482f8a439bae533fd953aa6f78",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatSlider(value=0.0, description='speed', max=1.0, min=-1.0, orientation='vertical'), FloatSl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edbe40cc7c4045d9ab32fc577ff9ea49",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Textarea(value='[15:41:20] >>> 감지 스레드 시작됨\\n[15:41:20] >>> 비전 시스템 초기화 완료\\n[15:41:18] >>> YOLO 및 OCR 모델 로딩 중...\\…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15:41:21] >>> 시스템 가동 시작!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1. 하드웨어 초기화\n",
-    "cfg.init_servos()\n",
-    "\n",
-    "# 2. 비전 시스템 및 컨트롤러 생성\n",
-    "vision_sys = Rvision.VisionSystem()\n",
-    "controller = Rlogic.DrivingController(vision_sys)\n",
-    "\n",
-    "# 3. 감지 스레드 시작\n",
-    "vision_sys.start_detection_thread()\n",
-    "\n",
-    "# UI 위젯 배치\n",
-    "ui_layout = ipywidgets.HBox([\n",
-    "    cfg.speed_slider, \n",
-    "    cfg.steering_slider\n",
-    "])\n",
-    "\n",
-    "display(cfg.image_widget)\n",
-    "display(ui_layout)\n",
-    "display(cfg.log_widget)\n",
-    "\n",
-    "# 초기 실행 및 이벤트 연결\n",
-    "controller.execute({'new': cfg.camera.value})\n",
-    "cfg.camera.observe(controller.execute, names='value')\n",
-    "\n",
-    "cfg.log_print(\">>> 시스템 가동 시작!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "7c175b3f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unhandled exception in client_connected_cb\n",
-      "transport: <_SelectorSocketTransport closed fd=2180>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\jupyter ex\\robotpal\\_core\\server.py\", line 180, in _handle_tcp\n",
-      "    await writer.wait_closed()\n",
-      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.13_3.13.2544.0_x64__qbz5n2kfra8p0\\Lib\\asyncio\\streams.py\", line 358, in wait_closed\n",
-      "    await self._protocol._get_close_waiter(self)\n",
-      "  File \"C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.13_3.13.2544.0_x64__qbz5n2kfra8p0\\Lib\\asyncio\\selector_events.py\", line 1005, in _read_ready__data_received\n",
-      "    data = self._sock.recv(self.max_size)\n",
-      "ConnectionResetError: [WinError 10054] 현재 연결은 원격 호스트에 의해 강제로 끊겼습니다\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[TCP] 예외 발생: [WinError 10054] 현재 연결은 원격 호스트에 의해 강제로 끊겼습니다\n",
-      "[TCP] 연결 종료 (('127.0.0.1', 62071))\n"
+      "249마1706 | 249마1706 | 100.0\n",
+      "찾은 타겟 번호판\n",
+      "PlateResult(text='249마1706', similarity=100.0, bbox=(677, 277, 705, 344))\n",
+      "유사도 점수: 100.0\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "cfg.camera.unobserve(controller.execute, names='value')\n",
-    "time.sleep(0.1)\n",
+    "# 카메라에서 불러온 프레임\n",
+    "# frame = get_frame()\n",
     "\n",
-    "# 스레드 종료\n",
-    "vision_sys.stop_detection_thread()\n",
+    "img_path = \"data/demo/capture_1766307472.jpg\"\n",
+    "frame = cv2.imread(img_path)\n",
     "\n",
-    "# 로봇 정지\n",
-    "cfg.robot.stop()\n",
-    "cfg.camera.stop()\n",
     "\n",
-    "cfg.log_print(\">>> 시스템 종료됨\")"
+    "# 현재 프레임에서 찾고자하는 번호판이 있는지\n",
+    "result = detector.detect(frame, target='249마1706')"
    ]
   }
  ],
