--- a/PJT12_1_RoadFollowing+WorkingAreaRecognition.ipynb
+++ b/PJT12_1_RoadFollowing+WorkingAreaRecognition.ipynb
@@ -2,19 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
+      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
+      "[System] WebSocket 프로세서 시작\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mChecking connectivity to the model hosters, this may take a while. To bypass this check, set `DISABLE_MODEL_SOURCE_CHECK` to `True`.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.big-log-text pre { font-size: 30px !important; line-height: 1.4 !important; font-weight: bold; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\paddle\\utils\\cpp_extension\\extension_utils.py:718: UserWarning: No ccache found. Please be aware that recompiling all source files may be required. You can download and install ccache from: https://github.com/ccache/ccache/blob/master/doc/INSTALL.md\n",
+      "  warnings.warn(warning_message)\n",
+      "\u001b[32mCreating model: ('PP-OCRv5_server_det', None)\u001b[0m\n",
+      "\u001b[32mModel files already exist. Using cached files. To redownload, please delete the directory manually: `C:\\Users\\user\\.paddlex\\official_models\\PP-OCRv5_server_det`.\u001b[0m\n",
+      "\u001b[32mCreating model: ('korean_PP-OCRv5_mobile_rec', None)\u001b[0m\n",
+      "\u001b[32mModel files already exist. Using cached files. To redownload, please delete the directory manually: `C:\\Users\\user\\.paddlex\\official_models\\korean_PP-OCRv5_mobile_rec`.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR Detector Ready!\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "os.environ[\"DISABLE_MODEL_SOURCE_CHECK\"] = \"True\"\n",
-    "\n",
     "import torchvision\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from IPython.display import display\n",
+    "from IPython.display import display, HTML\n",
     "import ipywidgets\n",
     "import ipywidgets.widgets as widgets\n",
     "import traitlets\n",
@@ -28,9 +73,13 @@
     "import PIL.Image\n",
     "import numpy as np\n",
     "from vision.detector import PlateNumberDetector\n",
+    "import threading\n",
+    "import time\n",
     "\n",
-    "# [추가] OCR 탐지기 초기화 (한 번만 실행)\n",
-    "# model='paddle'로 설정하여 로컬 엔진 사용\n",
+    "display(HTML(\"<style>.big-log-text pre { font-size: 30px !important; line-height: 1.4 !important; font-weight: bold; }</style>\"))\n",
+    "log_output = widgets.Output(layout={'border': '1px solid black', 'height': '300px', 'overflow_y': 'scroll'})\n",
+    "log_output.add_class(\"big-log-text\")\n",
+    "\n",
     "ocr_detector = PlateNumberDetector(\n",
     "    model=\"paddle\",\n",
     "    plate_similarity_thresh=80,\n",
@@ -41,13 +90,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model load success\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e38830866ef4840af81e921bb310c2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Label(value='areaA :'), Label(value='None'))), HBox(children=(Label(value='areaB…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5158f3de454e44e6a25b0ff7a2474565",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Image(value=b'', format='jpeg', height='224', width='224'), FloatSlider(value=0.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df62194a16ad47939751794734d74304",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(button_style='info', description='Start', style=ButtonStyle()), Label(value='Find Area :…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d4158e9cd8e402296274350d42c1791",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Label(value='Manual Controller'), Button(description='forward', layout=Layout(al…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa76ab0d8af44ca4bf7c6d35db25ae2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "robot = Robot()\n",
     "camera = Camera()\n",
-    "camera_ocr = Camera.instance(width=816, height=616)\n",
+    "# camera_ocr = Camera.instance(width=816, height=616)\n",
     "TTLServo.servoAngleCtrl(5, 45, 1, 100)\n",
     "\n",
     "model = torchvision.models.resnet18(pretrained=False)\n",
@@ -111,7 +248,7 @@
     "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias',disabled = False)\n",
     "vbox3 = widgets.VBox([lbl51,speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider])\n",
     "hbox6 = widgets.HBox([controls_box, vbox3], layout=widgets.Layout(align_self='center'))\n",
-    "log_output = ipywidgets.Output(layout={'border': '1px solid black', 'height': '200px', 'overflow_y': 'scroll'})\n",
+    "log_output = ipywidgets.Output(layout={'border': '1px solid black', 'height': '800px', 'overflow_y': 'scroll'})\n",
     "\n",
     "display(vbox1, hbox4,hbox5,hbox6, log_output)\n",
     "\n",
@@ -187,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +362,7 @@
     "            # 2. OCR 수행\n",
     "            if shared_ocr_image is not None:\n",
     "                try:\n",
-    "                    # 무거운 연산 수행 (여기서 2~3초 걸림)\n",
-    "                    # 1. 해상도와 타입 로그 찍기\n",
+    "\n",
     "                    h, w, c = shared_ocr_image.shape\n",
     "                    print_log(f\">>> [Check] Input Image Size: {w}x{h}\")\n",
     "                    \n",
@@ -236,8 +372,7 @@
     "                    print_log(f\">>> [Saved] {filename} 저장됨! 확인해보세요.\")\n",
     "\n",
     "                    # 3. OCR 실행\n",
-    "                    results = ocr_detector.detect(shared_ocr_image, target='249마1706')\n",
-    "                    \n",
+    "                    results = ocr_detector.detect(shared_ocr_image, target='255도7345')\n",
     "                    shared_ocr_result = results\n",
     "                except Exception as e:\n",
     "                    print_log(f\"OCR Error: {e}\")\n",
@@ -246,7 +381,7 @@
     "                print_log(\"OCR Image is None\")\n",
     "                shared_ocr_result = None\n",
     "\n",
-    "            print_log(\"<<< [Thread 3] OCR 연산 완료!\")\n",
+    "            # print_log(\"<<< [Thread 3] OCR 연산 완료!\")\n",
     "\n",
     "            # 3. 완료 신호 보내기\n",
     "            ocr_done_event.set()      # \"다 했어\" 깃발 들기\n",
@@ -276,8 +411,6 @@
     "                cv2.putText(self.imageInput, message, (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 0.8, (0, 0, 255), 2)\n",
     "            image_widget.value = bgr8_to_jpeg(self.imageInput)\n",
     "            time.sleep(0.05)\n",
-    "\n",
-    "\n",
     "\n",
     "    def run(self):\n",
     "        while self.th_flag:\n",
