--- a/PJT09_2_LiveDemo.ipynb
+++ b/PJT09_2_LiveDemo.ipynb
@@ -29,15 +29,44 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'robotpal'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mipywidgets\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtraitlets\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrobotpal\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Camera, bgr8_to_jpeg\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrobotpal\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Robot\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrobotpal\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mSCSCtrl\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TTLServo\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'robotpal'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[RobotPal] 서버 시작됨 | WebSocket: 9999, TCP: 9998\n",
+      "[RobotPal] 통신 대기 중... (WS: 9999, TCP: 9998)\n",
+      "[System] WebSocket 프로세서 시작\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Camera Ready!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f0e2f6b493f4cfb97dda6a4c76b9320",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'', format='jpeg', height='225', width='225')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -98,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b63e36aff424cbeb6b216636a1f57f1",
+       "model_id": "f12161121bd5482288ef394f47d7d904",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "124ea7df9c0241e6a70c6fa0a87abd63",
+       "model_id": "7e216e42012b4317965c6315c9a49b24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85e2470d591c4006a4b97023ae70f6e3",
+       "model_id": "4607d9b9c52043e69b77084c0d2d009a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +168,7 @@
     }
    ],
    "source": [
-    "TTLServo.servoAngleCtrl(5, 45, 1, 100)\n",
+    "TTLServo.servoAngleCtrl(5, 25, 1, 100)\n",
     "\n",
     "x_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='x')\n",
     "y_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='y')\n",
@@ -171,13 +200,13 @@
     "    angle = np.arctan2(x, y)\n",
     "    \n",
     "    #PID 제어를 이용한 모터 제어\n",
-    "    pid = angle * 0.2 + (angle - angle_last) * 0.5\n",
+    "    pid = angle * 0.1 + (angle - angle_last) * 0.25\n",
     "    angle_last = angle\n",
     "    \n",
     "    steering_slider.value = pid + 0\n",
     "    \n",
-    "    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), -0.9)\n",
-    "    robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), -0.9)\n",
+    "    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
+    "    robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0)\n",
     "    \n",
     "execute({'new': camera.value})\n",
     "\n",
